# Even-Brief

./: .gitignore  404.html  ARCHITECTURE.md  AUTOMATION.md  GENERATION.md  LICENSE  README.md  archive.json  even-brief-spec.md  index.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  template-reference.html
.claude/: settings.local.json
.claude/commands/: new-edition.md
.github/workflows/: ci.yml  daily.yml
assets/: app.js  styles.css
content/: edition.example.json
content/editions/: .gitkeep  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json
content/schema/: archive.schema.json  edition.schema.json
reference/: index.html
src/evenbrief/: __init__.py  assemble.py  check_edition.py  client.py  discover.py  fixtures.py  images.py  markets.py  pipeline.py  research.py  schema.py  verify.py  weather.py  write.py
templates/: base.html.j2
templates/partials/: _macros.html.j2  _markets.html.j2
tests/: conftest.py  test_archive_merge.py  test_dedupe_and_gate.py  test_render_and_parity.py  test_schema_and_pipeline.py
