[project]
name = "even-brief"
version = "1.0.0"
description = "Automated daily news briefing: research backend + static-site build pipeline for Even Brief."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "pydantic>=2.6",
    "Jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
# Convenience entry points (also runnable as `python -m evenbrief.pipeline` etc.)
even-brief-generate = "evenbrief.pipeline:main"
even-brief-build = "build.render:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
